Adding the ability to stop/cancel a batch operation while images are being converted.